# opengl-ffmpeg-video

./: CMakeLists.txt  LICENSE  README.md  build.sh  camera.h  clean.sh  display.cpp  display.h  input.cpp  input.h  main.cpp  render.cpp  render.h  run.sh  shader.cpp  shader.fragment  shader.h  shader.vertex  shader_screen.fragment  shader_screen.vertex  video_light.cpp  video_light.h
